# GoD-Pokemon-Stats-Editor

./: .gitignore  CMakeLists.txt  README.md
DataEditorTool/: CMakeLists.txt
DataEditorTool/include/: GoD-UI-Windows.h  IC-GoD-DataEditorTool.h  include.h
DataEditorTool/include/CSV/: CSVData.h  CSVDatabase.h  CSVHeader.h  CSVHeaderField.h  CSVLoader.h  CSVRow.h  CSVStringUtils.h  NewCSVData.h  StaticCSVFiles.h
DataEditorTool/include/CSV/CSVField/: CSVField.h  TypedCSVField.h
DataEditorTool/include/CSV/CSVType/: CSVBool.h  CSVFloat.h  CSVInt.h  CSVString.h  CSVType.h
DataEditorTool/include/CSV/Databases/: ColumnDatabase.h
DataEditorTool/include/CSV/StringTypes/: EntryNameString.h  IntHexParenthValue.h  ParenthValueString.h
DataEditorTool/include/CSVData/: Abilities.h  CSVTest.h  CsvData.h  Items.h  Moves.h  PokemonStats.h  Types.h
DataEditorTool/include/Command/: ChangeRow.h  Command.h  CommandQueue.h  ModifyHappiness.h  ModifySingleCSVValue.h  ModifyValue.h  MultiCommand.h  SwapMoves.h  SwitchActivePokemon.h
DataEditorTool/include/Contexts/: CustomImConfig.h  GuiContext.h  WindowContext.h
DataEditorTool/include/Editors/LearnedMoves/: LearnedMovesEditor.h  LearnedMovesLearnsets.h  LearnedMovesLearnsetsFilters.h  Learnset.h
DataEditorTool/include/Editors/PokemonStats/: BaseStat.h  BaseStatTotal.h  EvolutionCondition.h  EvolutionElement.h  EvolutionMethod.h  LevelUpMove.h  PokemonStatsBaseStats.h  PokemonStatsEditor.h  PokemonStatsEvolutionInfo.h  PokemonStatsLearnedMoves.h  PokemonStatsPokemonList.h  PokemonStatsSpeciesInfo.h  PokemonStatsTaughtMoves.h
DataEditorTool/include/Editors/Trainers/: CurrentShadowPokemonBox.h  TrainerPokemon.h  TrainersEditor.h  TrainersEditorBattle.h  TrainersEditorTrainerInfo.h  TrainersEditorTrainerPokemon.h  TrainersEditorTrainersList.h
DataEditorTool/include/Font/: FontLoader.h  FontManager.h  FontSettings.h  MergedFont.h
DataEditorTool/include/Layout/: LayoutSettings.h
DataEditorTool/include/Logging/: LogCategory.h  Logger.h
DataEditorTool/include/MainEditor/: DataEditorInstance.h  MainEditorWindow.h  ProjectRoot.h
DataEditorTool/include/MainMenu/: MainMenu.h
DataEditorTool/include/MainMenu/MainMenuSections/: MainMenuSection.h  MenuEdit.h  MenuFile.h  MenuSettings.h  MenuView.h
DataEditorTool/include/Modal/: BlockUnsavedProgress.h  Modal.h  ModalManager.h  SaveFailed.h
DataEditorTool/include/Pokeface/: PokefaceData.h
DataEditorTool/include/Settings/: AppSetting.h  AppSettings.h  FontSettings.h  LayoutSettings.h  Settings.h
DataEditorTool/include/Settings/SettingsSection/: FontSettings.h  GeneralSettingsSection.h  SettingsSection.h
DataEditorTool/include/UI/: MultiLineUiElement.h  MultiUiElement.h  TabCSVState.h  TabLayoutManager.h  UiCSVElement.h  UiElement.h  UiElementGrid.h  UiElementSwitcher.h  UiObject.h  UiSection.h  UiSize.h  UiTab.h
DataEditorTool/include/UI/BasicUiElements/: BasicUiElement.h  CSVCheckbox.h  CSVComboBox.h  CSVComboBoxInt.h  CSVEntryRowSelector.h  CSVIntBox.h  (+9 more)
DataEditorTool/include/UiSections/: BaseStats.h  EvolutionInfo.h  LearnedMoves.h  PokemonList.h  SpeciesInfo.h  TeachableMoveInfo.h  UiSection.h
DataEditorTool/include/Util/: FilterableComboBox.h  ItemSizeUtils.h  JsonHelpers.h  TextureLoader.h  UnsavedProgressModal.h
DataEditorTool/src/: GoD-UI-Windows.cpp  IC-GoD-DataEditorTool.cpp
DataEditorTool/src/CSV/: CSVData.cpp  CSVDatabase.cpp  CSVHeader.cpp  CSVLoader.cpp  CSVRow.cpp  CSVStringUtils.cpp  NewCSVData.cpp  StaticCSVFiles.cpp
DataEditorTool/src/CSVData/: Abilities.cpp  CSVTest.cpp  CsvData.cpp  Items.cpp  Moves.cpp  PokemonStats.cpp  Types.cpp
DataEditorTool/src/Command/: ChangeRow.cpp  Command.cpp  CommandQueue.cpp  ModifyHappiness.cpp  ModifySingleCSVValue.cpp  ModifyValue.cpp  MultiCommand.cpp  SwapMoves.cpp  SwitchActivePokemon.cpp
DataEditorTool/src/Contexts/: GuiContext.cpp  WindowContext.cpp
DataEditorTool/src/Font/: FontLoader.cpp  FontManager.cpp  FontSettings.cpp  MergedFont.cpp
DataEditorTool/src/Layout/: LayoutSettings.cpp
DataEditorTool/src/Logging/: LogCategory.cpp  Logger.cpp
DataEditorTool/src/MainEditor/: DataEditorInstance.cpp  MainEditorWindow.cpp  ProjectRoot.cpp
DataEditorTool/src/MainMenu/: MainMenu.cpp
DataEditorTool/src/Modal/: BlockUnsavedProgress.cpp  Modal.cpp  ModalManager.cpp  SaveFailed.cpp
DataEditorTool/src/Pokeface/: PokefaceData.cpp
DataEditorTool/src/Settings/: AppSetting.cpp  AppSettings.cpp  FontSettings.cpp  LayoutSettings.cpp  Settings.cpp
DataEditorTool/src/UI/: MultiLineUiElement.cpp  MultiUiElement.cpp  TabCSVState.cpp  TabLayoutManager.cpp  UiCSVElement.cpp  UiElement.cpp  UiElementGrid.cpp  UiElementSwitcher.cpp  UiObject.cpp  UiSection.cpp  UiSize.cpp  UiTab.cpp
DataEditorTool/src/UiSections/: BaseStats.cpp  EvolutionInfo.cpp  LearnedMoves.cpp  PokemonList.cpp  SpeciesInfo.cpp  TeachableMoveInfo.cpp  UiSection.cpp
DataEditorTool/src/Util/: FilterableComboBox.cpp  ItemSizeUtils.cpp  JsonHelpers.cpp  TextureLoader.cpp  UnsavedProgressModal.cpp
Docs/: CMakeLists.txt  Doxyfile.in
(+250 files in other folders)
